gccida/c3/reload_cse_regs_1
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs_1/src/reload1.c:8628:4: error: expected ';' after expression
rtx v6; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs_1/src/reload1.c:8628:5: error: use of undeclared identifier 'v6'
rtx v6; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs_1/src/reload1.c:8629:6: error: use of undeclared identifier 'v7'
rtx *v7; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs_1/src/reload1.c:8631:4: error: expected ';' after expression
rtx v9; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs_1/src/reload1.c:8631:5: error: use of undeclared identifier 'v9'
rtx v9; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs_1/src/reload1.c:8647:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = ( __int64)rtx[2]; 
               ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs_1/src/reload1.c:8652:39: error: expected expression
v3 = reload_cse_simplify_set( *( rtx *)&rtx[2], rtx); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs_1/src/reload1.c:8661:39: error: expected expression
if ( !rtx_equal_for_cselib_p( *( rtx *)( v2 + 8), *( rtx *)( v2 + 16)) ) 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs_1/src/reload1.c:8661:59: error: expected expression
if ( !rtx_equal_for_cselib_p( *( rtx *)( v2 + 8), *( rtx *)( v2 + 16)) ) 
                                                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs_1/src/reload1.c:8663:1: error: use of undeclared identifier 'v9'
v9 = *( rtx *)( v2 + 8); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs_1/src/reload1.c:8663:14: error: expected expression
v9 = *( rtx *)( v2 + 8); 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs_1/src/reload1.c:8665:27: error: use of undeclared identifier 'v9'
if ( !v9 || ( *( _DWORD *)v9 & 0x40000000) == 0 ) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs_1/src/reload1.c:8665:7: error: use of undeclared identifier 'v9'
if ( !v9 || ( *( _DWORD *)v9 & 0x40000000) == 0 ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs_1/src/reload1.c:8674:53: error: use of undeclared identifier 'v9'
*( _QWORD *)&rtx[2] = gen_rtx_fmt_e( USE, VOIDmode, v9); 
                                                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs_1/src/reload1.c:8690:1: error: use of undeclared identifier 'v9'
v9 = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs_1/src/reload1.c:8694:1: error: use of undeclared identifier 'v6'
v6 = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs_1/src/reload1.c:8695:1: error: use of undeclared identifier 'v7'
v7 = *( rtx **)&v4[2 * v5]; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs_1/src/reload1.c:8695:15: error: expected expression
v7 = *( rtx **)&v4[2 * v5]; 
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs_1/src/reload1.c:8696:17: error: use of undeclared identifier 'v7'
v8 = *( _WORD *)v7; 
                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_cse_regs_1/src/obj/reload1.o] Error 1
